<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_colour2">

<!--button to next room(purple shell)-->
    <Button
        android:id="@+id/movieroom"
        android:layout_width="250dp"
        android:layout_height="215dp"
        android:background="@drawable/shellpur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="220dp"/>

<!--bg-->
    <ImageView
        android:id="@+id/sand"
        android:layout_width="900dp"
        android:layout_height="280dp"
        android:src="@drawable/sand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/sand" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="202dp"
        android:src="@drawable/bubbles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/bubbles" />

<!--description-->
    <TextView
        android:id="@+id/roomname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie"
        android:textSize="30sp"
        android:fontFamily="@font/tmonmonsori"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movieroom"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/names"
        android:textSize="15sp"
        android:fontFamily="@font/tmonmonsori"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roomname"
        android:layout_marginTop="30dp"/>

<!--move left&right-->
    <Button
        android:id="@+id/butLeft"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:background="@drawable/arrowleft"
        app:layout_constraintBottom_toTopOf="@+id/sand"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/butRight"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:background="@drawable/arrowright"
        app:layout_constraintBottom_toTopOf="@+id/sand"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>